--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-leaflet": "^4.2.1",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.28.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^16.0.3",
     "swiper": "^11.2.1",
