--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.3",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^16.0.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1",
     "web-vitals": "^2.1.0",
     "yup": "^1.4.0"
