--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.12.0",
     "icofont": "^1.0.0",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "nodemailer": "^6.9.16",
     "owl.carousel": "^2.3.4",
