--- a/package.json
+++ b/package.json
@@ -8,21 +8,25 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@icon/icofont": "^1.0.1-alpha.1",
+    "@react-email/components": "^0.0.33",
     "@react-google-maps/api": "^2.20.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.22.7",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "css-loader": "^7.1.2",
     "emailjs-com": "^3.2.0",
+    "express": "^4.21.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.12.0",
     "icofont": "^1.0.0",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.10.0",
     "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
